partial_test_build.log
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:399: note: this is the location of the previous definition
  399 | #define VALIDATE_NOT_NULL(ptr, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/error_context.h:98: warning: "VALIDATE_RANGE" redefined
   98 | #define VALIDATE_RANGE(val, min, max, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:408: note: this is the location of the previous definition
  408 | #define VALIDATE_RANGE(val, min, max, name) do { \
      | 
In file included from /mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/workspace_manager.h:9,
                 from /mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu:27:
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/error_context.h:71: warning: "CHECK_STATUS" redefined
   71 | #define CHECK_STATUS(status) do { \
      | 
In file included from /mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_manager.h:8,
                 from /mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu:17:
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:382: note: this is the location of the previous definition
  382 | #define CHECK_STATUS(status) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/error_context.h:80: warning: "CHECK_STATUS_MSG" redefined
   80 | #define CHECK_STATUS_MSG(status, msg) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:390: note: this is the location of the previous definition
  390 | #define CHECK_STATUS_MSG(status, msg) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/error_context.h:89: warning: "VALIDATE_NOT_NULL" redefined
   89 | #define VALIDATE_NOT_NULL(ptr, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:399: note: this is the location of the previous definition
  399 | #define VALIDATE_NOT_NULL(ptr, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/error_context.h:98: warning: "VALIDATE_RANGE" redefined
   98 | #define VALIDATE_RANGE(val, min, max, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:408: note: this is the location of the previous definition
  408 | #define VALIDATE_RANGE(val, min, max, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_xxhash.h(157): error: identifier "XXH64_STRIPE_LEN" is undefined
      if (input_size >= XXH64_STRIPE_LEN) {
                        ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_xxhash.h(176): error: identifier "xxh64_merge_round" is undefined
          h64 = xxh64_merge_round(h64, v1);
                ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_xxhash.h(157): error: identifier "XXH64_STRIPE_LEN" is undefined
      if (input_size >= XXH64_STRIPE_LEN) {
                        ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_xxhash.h(176): error: identifier "xxh64_merge_round" is undefined
          h64 = xxh64_merge_round(h64, v1);
                ^

2 errors detected in the compilation of "/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_fse.cu".
2 errors detected in the compilation of "/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_dictionary.cu".
make[3]: *** [CMakeFiles/cuda_zstd_static.dir/build.make:135: CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_fse.cu.o] Error 2
make[3]: *** Waiting for unfinished jobs....
make[3]: *** [CMakeFiles/cuda_zstd_static.dir/build.make:165: CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_dictionary.cu.o] Error 2
In file included from /mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/workspace_manager.h:9,
                 from /mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu:27:
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/error_context.h:71: warning: "CHECK_STATUS" redefined
   71 | #define CHECK_STATUS(status) do { \
      | 
In file included from /mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_manager.h:8,
                 from /mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu:17:
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:382: note: this is the location of the previous definition
  382 | #define CHECK_STATUS(status) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/error_context.h:80: warning: "CHECK_STATUS_MSG" redefined
   80 | #define CHECK_STATUS_MSG(status, msg) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:390: note: this is the location of the previous definition
  390 | #define CHECK_STATUS_MSG(status, msg) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/error_context.h:89: warning: "VALIDATE_NOT_NULL" redefined
   89 | #define VALIDATE_NOT_NULL(ptr, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:399: note: this is the location of the previous definition
  399 | #define VALIDATE_NOT_NULL(ptr, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/error_context.h:98: warning: "VALIDATE_RANGE" redefined
   98 | #define VALIDATE_RANGE(val, min, max, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_types.h:408: note: this is the location of the previous definition
  408 | #define VALIDATE_RANGE(val, min, max, name) do { \
      | 
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_xxhash.h(157): error: identifier "XXH64_STRIPE_LEN" is undefined
      if (input_size >= XXH64_STRIPE_LEN) {
                        ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/include/cuda_zstd_xxhash.h(176): error: identifier "xxh64_merge_round" is undefined
          h64 = xxh64_merge_round(h64, v1);
                ^

2 errors detected in the compilation of "/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu".
make[3]: *** [CMakeFiles/cuda_zstd_static.dir/build.make:105: CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_manager.cu.o] Error 2
make[2]: *** [CMakeFiles/Makefile2:151: CMakeFiles/cuda_zstd_static.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:340: CMakeFiles/test_correctness.dir/rule] Error 2
make: *** [Makefile:270: test_correctness] Error 2
